--- a/app/src/main/res/layout/wifi_network.xml
+++ b/app/src/main/res/layout/wifi_network.xml
@@ -18,6 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="55dp"
             android:id="@+id/network_on"
-            android:layout_alignParentRight="true" />
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="16dp" />
 
 </RelativeLayout>
